Fix green dot alignment on different screen sizes

--- a/src/components/Reports/ProjectMemberTable/ProjectMemberTable.css
+++ b/src/components/Reports/ProjectMemberTable/ProjectMemberTable.css
@@ -10,7 +10,7 @@
 .reports-table-head-members {
   background-color: #eee7f8;  
   display: grid;
-  grid-template-columns: 1fr 2fr 1fr 3fr;
+  grid-template-columns: 20% 20% 20% 40%;
   column-gap: 4px;
   min-height: 42px;
   align-items: center;
@@ -21,7 +21,7 @@
 
 .project-member-table-row {
   display: grid;
-  grid-template-columns: 1fr 2fr 1fr 3fr;
+  grid-template-columns: 20% 20% 20% 40%;
   column-gap: 4px;
   min-height: 42px;
   align-items: center;
@@ -57,9 +57,9 @@
     text-align: center;
   }
   .project-member-table-row {    
-    grid-template-columns: 1fr 3fr 1fr 3fr;
+    grid-template-columns: 20% 20% 20% 40%;
   }
   .reports-table-head-members {
-    grid-template-columns: 1fr 3fr 1fr 3fr;
+    grid-template-columns: 20% 20% 20% 40%;
   }
 }
