--- a/src/components/Reports/WbsTable/WbsTable.css
+++ b/src/components/Reports/WbsTable/WbsTable.css
@@ -8,7 +8,8 @@
   border-radius: 4px;
   min-height: 32px;
   padding: 8px 16px;  
-  display: flex;
+  display: grid;
+  grid-template-columns: 20% 20% 20% 40%;
 }
 
 iframe {
@@ -46,10 +47,8 @@ iframe {
 
 .wbs-table-row {
   display: grid;
-
   grid-auto-flow: column;
-  grid-template-columns: 1fr 2fr 1fr 3fr;
-
+  grid-template-columns: 20% 20% 20% 40%;
   column-gap: 4px;
   min-height: 42px;
   align-items: center;
